--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <a href="#" class="logo">Your Name</a>
         <nav class="navigation">
-            <a href="#skills">S</a>
+            <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
